# confluence-retriever

./: .env.example  .gitattributes  AGENTS.md  CLAUDE.md  COPILOT_CHAT_VSCODE_INSTALLATION_IMPLEMENTATION.md  COPILOT_CLI_QUICK_REFERENCE.md  COPILOT_CLI_QUICK_START.txt  COPILOT_CLI_SETUP.md  COPILOT_CLI_TESTING.md  GEMINI.md  GEMINI_SETUP.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  VSCODE_COPILOT_CHAT_SETUP.md  confluence-pat-setup.md  confluence-retriever-implementation.md  confluence-retriever-improvements-20260522.md  confluence-retriever-improvements-v3-20260524.md  improvements.md  install.py  presentation.md  pyproject.toml  requirements-dev.txt  requirements.txt  team-demo-script.md  ultra-search-mode-plan.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
scripts/: wiki_answer.py
skills/: evals.md  memory.md  search-wiki.md
src/confluence_retriever/: __init__.py  cli.py  client.py  config.py  cql.py  formatters.py  html_utils.py  ranking.py  url_parsing.py
src/confluence_retriever.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli_subcommands.py  test_html_to_markdown.py  test_install.py  test_scorer_invariants.py  test_url_parsing.py  test_wiki_answer.py
