[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-retriever"
version = "0.1.0"
description = "Small Confluence search CLI that returns ranked Markdown or JSON results."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0,<3",
    "beautifulsoup4>=4.11.0,<5",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "responses>=0.20.0,<1",
]

[project.scripts]
wiki-answer = "wiki_answer:main"

[tool.setuptools]
py-modules = ["wiki_answer"]

[tool.setuptools.package-dir]
"" = "scripts"
