[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-retriever"
version = "0.2.0"
description = "Small Confluence search CLI that returns ranked Markdown or JSON results."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0,<3",
    "beautifulsoup4>=4.11.0,<5",
    "python-dotenv>=1.0.0,<2",
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "responses>=0.20.0,<1",
]
# `pip install confluence-retriever[read]` installs the full-page HTML→Markdown
# renderer used by `confluence-search read --format markdown`.
read = [
    "markdownify>=0.11,<1",
]

[project.scripts]
confluence-search = "confluence_retriever.cli:main_entry"
# Legacy console script name; kept for one release.
wiki-answer = "confluence_retriever.cli:main_entry"

[tool.setuptools.packages.find]
where = ["src"]
